init feature job-application

--- a/docs/adr/2023.11.23-api-platform.md
+++ b/docs/adr/2023.11.23-api-platform.md
@@ -1,5 +1,5 @@
 Date: 2023.11.23
-Title: api-platform
+>Title: api-platform
 
 ## Wstęp
 Utworzenie brancha api-platform i instalacja biblioteki api-platform.
