--- a/docs/adr/2023.11.23-job-application.md
+++ b/docs/adr/2023.11.23-job-application.md
@@ -25,3 +25,9 @@ Służy do przechowywania danych o aplikacjach do pracy.
 
 ## Wykonane czynności:
 
+
+```bash
+# utworzenie encji w bazie danych
+php bin/console doctrine:schema:create
+```
+
