test: add tests endpoint api by JobApplication

--- a/docs/adr/2023.11.23-job-application.md
+++ b/docs/adr/2023.11.23-job-application.md
@@ -25,9 +25,13 @@ Służy do przechowywania danych o aplikacjach do pracy.
 
 ## Wykonane czynności:
 
-
+Tworzenie schematu entity w  bazie danych
 ```bash
 # utworzenie encji w bazie danych
 php bin/console doctrine:schema:create
 ```
 
+---
+<< Back to [README.md](/README.md)
+ 
+<< Back to [CHANGELOG.md](/CHANGELOG.md)
