--- a/docs/adr/2024.03.20-add-react.md
+++ b/docs/adr/2024.03.20-add-react.md
@@ -30,3 +30,4 @@ Zainstalowano react.js
 npm install react react-dom prop-types --save
 ```
 
+Dodano też w ramach dobrej praktyki TypeScript ( tsconfig.json, assets/**/*.tsx)
